--- a/project/crm_app/templates/crm_app/base.html
+++ b/project/crm_app/templates/crm_app/base.html
@@ -1,19 +1,39 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>{{title}}</title>
+    <link type="text/css" href="{% static 'crm_app/css/styles.css' %}" rel="stylesheet">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href=" {% static 'crm_app/images/slogo.ico' %}" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-{%block mainmenu%}
-<ul>
-{% for m in menu%}
-    <li>{{m.title}}</li>
-{%endfor%}
-</ul>
-{%endblock mainmenu%}
+{% block mainmenu %}
+<div class="header">
+<ul id="mainmenu" class="mainmenu">
+    <li class="logo"><a href="{% url 'home' %}"> <img src="{% static 'crm_app/images/logo.png' %}" alt=""> </a></li>
+    {% for m in menu %}
+    <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
 
-{%block content%}{%endblock content%}
+    {% endfor %}
+</ul>
+</div>
+
+{% block title %}
+<h1>{{title}}</h1>
+{% endblock title %}
+
+{% endblock mainmenu %}
+
+<div class="container">
+{%block content%}
+
+
+
+{%endblock content%}
+</div>
 
 </body>
 </html>
