--- a/project/crm_app/templates/crm_app/contragents.html
+++ b/project/crm_app/templates/crm_app/contragents.html
@@ -1,6 +1,7 @@
 {% extends 'crm_app/base.html' %}
 
 {%block content%}
-<h1>{{title}}</h1>
-<p>this is a contragent page</p>
+
+<div class="left-bar">ghfghgfhfhgfhgfhgf</div>
+<div class="centercontent">hhggjghjghjhgjhgjhgjhgjhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
 {%endblock content%}
