--- a/project/crm_app/templates/crm_app/contragents.html
+++ b/project/crm_app/templates/crm_app/contragents.html
@@ -2,6 +2,21 @@
 
 {%block content%}
 
-<div class="left-bar">ghfghgfhfhgfhgfhgf</div>
-<div class="centercontent">hhggjghjghjhgjhgjhgjhgjhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</div>
+
+
+
+<div class="left-bar"><ul>
+    {%for c in contragentss %}
+       <li><a href="{{ url c.url_name }}">{{c.title}}</a></li>
+    {%endfor%}</ul>
+
+</div>
+
+<div class="centercontent">
+    {% for c in contragentss %}
+        <h3>{{c.key}}</h3>
+
+    <hr>
+    {% endfor %}
+</div>
 {%endblock content%}
