--- a/project/crm_app/templates/crm_app/contragents.html
+++ b/project/crm_app/templates/crm_app/contragents.html
@@ -7,7 +7,7 @@
 
 <div class="left-bar"><ul>
     {%for c in contragentss %}
-       <li><a href="{{ url c.url_name }}">{{c.title}}</a></li>
+       <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
     {%endfor%}</ul>
 
 </div>
