--- a/project/crm_app/templates/crm_app/sdelki.html
+++ b/project/crm_app/templates/crm_app/sdelki.html
@@ -2,7 +2,7 @@
 {%block content%}
 
 <div class="left-bar"><ul>
-    {%for c in contragentss %}
+    {%for c in operationss %}
         <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
 
     {%endfor%}</ul>
@@ -10,14 +10,11 @@
 </div>
 
 <div class="centercontent"><ul>
-    {% for c in clients %}
-        <h3>{{c.company_name}}</h3>
-    <li>{{c.contact_name}}</li>
-    <li>{{c.email}} </li>
-    <li>{{c.phone}}</li>
-    <li>{{c.address}} </li>
-    <li>{{c.created}} </li>
-    <li>{{c.updated}} </li>
+    {% for c in sdelki %}
+        <h3>{{c.client}}</h3>
+    <li>{{c.cl_price}} {{c.cl_currency}}</li>
+    <li>номер сделкі: {{c.number}} </li>
+
 
 <p ><a href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
