added cat_selected to contragents

--- a/project/crm_app/templates/crm_app/clients.html
+++ b/project/crm_app/templates/crm_app/clients.html
@@ -3,7 +3,12 @@
 
 <div class="left-bar"><ul>
     {%for c in contragentss %}
-        <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
+         {% if c.url_name == 'clients' %}
+
+       <li class="selected">{{c.title}}</li>
+    {%else%}
+    <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
+    {% endif%}
 
     {%endfor%}</ul>
 
