--- a/project/crm_app/templates/crm_app/other_companies.html
+++ b/project/crm_app/templates/crm_app/other_companies.html
@@ -7,7 +7,12 @@
 
 <div class="left-bar"><ul>
     {%for c in contragentss %}
-        <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
+         {% if c.url_name == 'other_companies' %}
+
+       <li class="selected">{{c.title}}</li>
+    {%else%}
+    <li><a href="{% url c.url_name %}">{{c.title}}</a></li>
+    {% endif%}
     {%endfor%}</ul>
 
 </div>
