--- a/project/crm_app/templates/crm_app/quotations.html
+++ b/project/crm_app/templates/crm_app/quotations.html
@@ -10,6 +10,8 @@
 </div>
 
 <div class="centercontent"><ul>
+    <button class="addbutton"><a href="{% url 'add_quotation' %}">Добавить котировку</a></button>
+
     {% for c in quotations %}
         <h3>{{c.client}}</h3>
     <li>{{c.status}}</li>
