--- a/project/crm_app/templates/crm_app/add_quotation.html
+++ b/project/crm_app/templates/crm_app/add_quotation.html
@@ -6,40 +6,15 @@
 
 </ul>
 </div>
+
 <form action="{% url 'add_quotation' %}" method="post">
 {% csrf_token %}
     <div class="form-error">{{ form.non_field_errors }}</div>
 
-    <p><label class="form-label" for="{{ form.descripsion.id_for_label }}" >{{form.descripsion.label}}: </label> {{form.descripsion}} </p>
-    <div class="form-error">{{ form.descripsion.errors }}</div>
-    <p><label class="form-label" for="{{ form.transport.id_for_label }}" >{{form.transport.label}}: </label> {{form.transport}} </p>
-    <div class="form-error">{{ form.transport.errors }}</div>
-    <p><label class="form-label" for="{{ form.transport.id_for_label }}" >{{form.transport.label}}: </label> {{form.transport}} </p>
-    <div class="form-error">{{ form.transport.errors }}</div>
-    <p><label class="form-label" for="{{ form.client.id_for_label }}" >{{form.client.label}}: </label> {{form.client}} </p>
-    <div class="form-error">{{ form.client.errors }}</div>
-    <p><label class="form-label" for="{{ form.common_transport.id_for_label }}" >{{form.common_transport.label}}: </label> {{form.common_transport}} </p>
-    <div class="form-error">{{ form.common_transport.errors }}</div>
-    <p><label class="form-label" for="{{ form.common_direction.id_for_label }}" >{{form.common_direction.label}}: </label> {{form.common_direction}} </p>
-    <div class="form-error">{{ form.common_direction.errors }}</div>
-    <p><label class="form-label" for="{{ form.stavka1.id_for_label }}" >{{form.stavka1.label}}: </label> {{form.stavka1}} </p>
-    <div class="form-error">{{ form.stavka1.errors }}</div>
-    <p><label class="form-label" for="{{ form.comment_field1.id_for_label }}" >{{form.comment_field1.label}}: </label> {{form.comment_field1}} </p>
-    <div class="form-error">{{ form.comment_field1.errors }}</div>
-    <p><label class="form-label" for="{{ form.stavka2.id_for_label }}" >{{form.stavka2.label}}: </label> {{form.stavka2}} </p>
-    <div class="form-error">{{ form.stavka2.errors }}</div>
-    <p><label class="form-label" for="{{ form.comment_field2.id_for_label }}" >{{form.comment_field2.label}}: </label> {{form.comment_field2}} </p>
-    <div class="form-error">{{ form.comment_field2.errors }}</div>
-     <p><label class="form-label" for="{{ form.comment_field3.id_for_label }}" >{{form.comment_field3.label}}: </label> {{form.comment_field3}} </p>
-    <div class="form-error">{{ form.comment_field3.errors }}</div>
-    <p><label class="form-label" for="{{ form.comment_field4.id_for_label }}" >{{form.comment_field4.label}}: </label> {{form.comment_field4}} </p>
-    <div class="form-error">{{ form.comment_field4.errors }}</div>
 
-    <p><label class="form-label" for="{{ form.status.id_for_label }}" >{{form.status.label}}: </label> {{form.status}} </p>
-    <div class="form-error">{{ form.status.errors }}</div>
-    <p><label class="form-label" for="{{ form.result.id_for_label }}" >{{form.result.label}}: </label> {{form.result}} </p>
-    <div class="form-error">{{ form.result.errors }}</div>
-
-    <button type="submit">Добавить</button>
-</form>
-{%endblock content%}
+    {% for f in form %}
+{{form.field.as_hidden }}
+    <div class=""><label for="{{ f.id_for_label }}" >{{f.label}}: </label> {{f}} </div>
+    <div >{{ f.errors }}</div>
+    {% endfor %}
+{% endblock content %}
