--- a/project/crm_app/templates/crm_app/add_quotation.html
+++ b/project/crm_app/templates/crm_app/add_quotation.html
@@ -16,5 +16,6 @@
 {{form.field.as_hidden }}
     <div class=""><label for="{{ f.id_for_label }}" >{{f.label}}: </label> {{f}} </div>
     <div >{{ f.errors }}</div>
-    {% endfor %}
+
+    {% endfor %} <button>добавіть</button>
 {% endblock content %}
