--- a/project/crm_app/templates/crm_app/base.html
+++ b/project/crm_app/templates/crm_app/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>{{title}}</title>
     <link type="text/css" href="{% static 'crm_app/css/styles.css' %}" rel="stylesheet">
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="shortcut icon" href=" {% static 'crm_app/images/slogo.ico' %}" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,11 +31,11 @@
 
 <div class="container">
 {%block content%}
-
-
-
 {%endblock content%}
 </div>
+
+
+<script src="{% static 'crm_app/js/script.js' %}"></script>
 
 </body>
 </html>
