--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -11,10 +11,22 @@
 </div>
 
 <div class="centercontent"><ul>
-
-        <h3>{{quotation.descripsion}}</h3>
+    <p class="ttt">прівет</p>
+    <h3>{{quotation.descripsion}}</h3>
     <li>{{quotation.transport}}</li>
     <li>{{quotation.client}} </li>
+    <li>{{quotation.common_direction}} </li>
+    <li>ставка  -{{quotation.stavka1}} </li>
+    <li>коммент  -{{quotation.comment_field1}} </li>
+    <li>ставка 2 - {{quotation.stavka2}} </li>
+    <li>коммент 2 - {{quotation.comment_field2}} </li>
+    <li>ставка 3 - {{quotation.stavka3}} </li>
+    <li>коммент 3 -{{quotation.comment_field3}} </li>
+    <li>ставка 4 -{{quotation.stavka4}} </li>
+    <li>коммент 4 -{{quotation.comment_field4}} </li>
+    <li>{{quotation.status}} </li>
+    <li>{{quotation.result}} </li>
+    <li>{{quotation.common_transport}} </li>
 
     <li><a href="#">sdelki v kotoryh uchavstvuet - количество</a></li>
     <li><a href="#">документы </a></li>
