--- a/project/crm_app/templates/crm_app/clients.html
+++ b/project/crm_app/templates/crm_app/clients.html
@@ -16,8 +16,8 @@
 </div>
 
 <div class="centercontent">
-<p id="button"><a href="{% url 'home' %}">Посмотреть подробней</a></p>
-    <p id="hh">hhhhhhhhhhhhhhh</p>
+
+
     <ul>
     {% for c in clients %}
         <h3>{{c.company_name}}</h3>
@@ -30,6 +30,7 @@
 
 <p><a href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
+        <button type="submit">Добавить</button>
 </ul>
 </div>
 {%endblock content%}
