successfully adding stavka's

--- a/project/crm_app/templates/crm_app/add_quotation.html
+++ b/project/crm_app/templates/crm_app/add_quotation.html
@@ -31,7 +31,7 @@
 
     <!-- ставки: 2, 3, 4 -->
     <ul class="tree">
-      <li><details><summary> + Добавить вторую ставку: </summary>
+      <li><details><summary> Добавить вторую ставку: </summary>
         <ul>
           <li>
             <summary><label for="{{ form.stavka2.id_for_label }}">{{ form.stavka2.label }}:</label>{{ form.stavka2 }}</summary>
@@ -44,7 +44,7 @@
       </details></li></ul>
 
    <ul class="tree">
-      <li><details><summary> + Добавить третью ставку: </summary>
+      <li><details><summary> Добавить третью ставку: </summary>
         <ul>
           <li>
             <summary><label for="{{ form.stavka3.id_for_label }}">{{ form.stavka3.label }}:</label>{{ form.stavka3 }}</summary>
@@ -57,7 +57,7 @@
       </details></li></ul>
 
     <ul class="tree">
-      <li><details><summary> + Добавить четвертоую ставку: </summary>
+      <li><details><summary> Добавить четвертоую ставку: </summary>
         <ul>
           <li>
             <summary><label for="{{ form.stavka4.id_for_label }}">{{ form.stavka4.label }}:</label>{{ form.stavka4 }}</summary>
@@ -66,6 +66,87 @@
       <li>
             <summary><label for="{{ form.comment_field4.id_for_label }}">{{ form.comment_field4.label }}:</label>{{ form.comment_field4 }}</summary>
             <div class="form-error">{{ form.comment_field4.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+
+
+    <ul class="tree">
+      <li><details><summary> Добавить пятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka5.id_for_label }}">{{ form.stavka5.label }}:</label>{{ form.stavka5 }}</summary>
+            <div class="form-error">{{ form.stavka5.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field5.id_for_label }}">{{ form.comment_field5.label }}:</label>{{ form.comment_field5 }}</summary>
+            <div class="form-error">{{ form.comment_field5.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+
+  <ul class="tree">
+      <li><details><summary>  Добавить шестую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka6.id_for_label }}">{{ form.stavka6.label }}:</label>{{ form.stavka6 }}</summary>
+            <div class="form-error">{{ form.stavka6.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field6.id_for_label }}">{{ form.comment_field6.label }}:</label>{{ form.comment_field6 }}</summary>
+            <div class="form-error">{{ form.comment_field6.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить седьмую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka7.id_for_label }}">{{ form.stavka7.label }}:</label>{{ form.stavka7 }}</summary>
+            <div class="form-error">{{ form.stavka7.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field7.id_for_label }}">{{ form.comment_field7.label }}:</label>{{ form.comment_field7 }}</summary>
+            <div class="form-error">{{ form.comment_field7.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить восьмую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka8.id_for_label }}">{{ form.stavka8.label }}:</label>{{ form.stavka8 }}</summary>
+            <div class="form-error">{{ form.stavka8.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field8.id_for_label }}">{{ form.comment_field8.label }}:</label>{{ form.comment_field8 }}</summary>
+            <div class="form-error">{{ form.comment_field8.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить девятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka9.id_for_label }}">{{ form.stavka9.label }}:</label>{{ form.stavka9 }}</summary>
+            <div class="form-error">{{ form.stavka9.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field9.id_for_label }}">{{ form.comment_field9.label }}:</label>{{ form.comment_field9 }}</summary>
+            <div class="form-error">{{ form.comment_field9.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить десятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka10.id_for_label }}">{{ form.stavka10.label }}:</label>{{ form.stavka10 }}</summary>
+            <div class="form-error">{{ form.stavka4.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field10.id_for_label }}">{{ form.comment_field10.label }}:</label>{{ form.comment_field10 }}</summary>
+            <div class="form-error">{{ form.comment_field10.errors }}</div>
       </li></ul>
       </details></li></ul>
     <!-- ставки 2, 3, 4 - конец -->
