--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -24,6 +24,18 @@
     <li>коммент 3 -{{quotation.comment_field3}} </li>
     <li>ставка 4 -{{quotation.stavka4}} </li>
     <li>коммент 4 -{{quotation.comment_field4}} </li>
+     <li>ставка 5  -{{quotation.stavka5}} </li>
+    <li>коммент 5 -{{quotation.comment_field5}} </li>
+    <li>ставка 6 - {{quotation.stavka6}} </li>
+    <li>коммент 6 - {{quotation.comment_field6}} </li>
+    <li>ставка 7 - {{quotation.stavka7}} </li>
+    <li>коммент 7 -{{quotation.comment_field7}} </li>
+    <li>ставка 8 -{{quotation.stavka8}} </li>
+    <li>коммент 8 -{{quotation.comment_field8}} </li>
+    <li>ставка 9 - {{quotation.stavka9}} </li>
+    <li>коммент 9 -{{quotation.comment_field9}} </li>
+    <li>ставка 10 -{{quotation.stavka10}} </li>
+    <li>коммент 10 -{{quotation.comment_field10}} </li>
     <li>{{quotation.status}} </li>
     <li>{{quotation.result}} </li>
     <li>{{quotation.common_transport}} </li>
