making better form quotation

--- a/project/crm_app/static/crm_app/css/styles.css
+++ b/project/crm_app/static/crm_app/css/styles.css
@@ -76,6 +76,11 @@ p#hh {
     color: green;
 }
 
+.tree li{
+  display      : block;
+  position     : relative;
+  padding-left : calc(2 * var(--spacing) - var(--radius) - 2px);
+}
 
 
 
