adding prices and positive int

--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -17,27 +17,48 @@
     <li>{{quotation.client}} </li>
     <li>{{quotation.common_direction}} </li>
     <li>ставка  -{{quotation.stavka1}} </li>
+     <li>цена:  -{{quotation.price1}} {{quotation.currency1}}  </li>
     <li>коммент  -{{quotation.comment_field1}} </li>
-    <li>ставка 2 - {{quotation.stavka2}} </li>
+
+    <li>ставка 2 - {{quotation.stavka2}}
+     <li>цена:  -{{quotation.price2}} {{quotation.currency2}}  </li>
     <li>коммент 2 - {{quotation.comment_field2}} </li>
+
     <li>ставка 3 - {{quotation.stavka3}} </li>
+     <li>цена:  -{{quotation.price3}} {{quotation.currency3}}  </li>
     <li>коммент 3 -{{quotation.comment_field3}} </li>
+
     <li>ставка 4 -{{quotation.stavka4}} </li>
+     <li>цена:  -{{quotation.price4}} {{quotation.currency4}}  </li>
     <li>коммент 4 -{{quotation.comment_field4}} </li>
+
      <li>ставка 5  -{{quotation.stavka5}} </li>
+     <li>цена:  - {{quotation.price5}} {{quotation.currency5}}  </li>
     <li>коммент 5 -{{quotation.comment_field5}} </li>
+
     <li>ставка 6 - {{quotation.stavka6}} </li>
+     <li>цена:  - {{quotation.price6}} {{quotation.currency6}}  </li>
     <li>коммент 6 - {{quotation.comment_field6}} </li>
+
     <li>ставка 7 - {{quotation.stavka7}} </li>
+     <li>цена:  - {{quotation.price7}} {{quotation.currency7}}  </li>
     <li>коммент 7 -{{quotation.comment_field7}} </li>
+
     <li>ставка 8 -{{quotation.stavka8}} </li>
-    <li>коммент 8 -{{quotation.comment_field8}} </li>
+     <li>цена:  - {{quotation.price8}} {{quotation.currency8}}  </li>
+    <li>коммент 8 - {{quotation.comment_field8}} </li>
+
     <li>ставка 9 - {{quotation.stavka9}} </li>
-    <li>коммент 9 -{{quotation.comment_field9}} </li>
+     <li>цена:  - {{quotation.price9}} {{quotation.currency9}}  </li>
+    <li>коммент 9 - {{quotation.comment_field9}} </li>
+
     <li>ставка 10 -{{quotation.stavka10}} </li>
-    <li>коммент 10 -{{quotation.comment_field10}} </li>
+     <li>цена:  - {{quotation.price10}} {{quotation.currency10}}  </li>
+    <li>коммент 10 - {{quotation.comment_field10}} </li>
+
     <li>{{quotation.status}} </li>
     <li>{{quotation.result}} </li>
+
     <li>{{quotation.common_transport}} </li>
 
     <li><a href="#">sdelki v kotoryh uchavstvuet - количество</a></li>
