--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -11,8 +11,9 @@
 </div>
 
 <div class="centercontent"><ul>
-  
+
     <h3>{{quotation.descripsion}}</h3>
+    <li>{{quotation.time_create}}</li>
     <li>{{quotation.transport}}</li>
     <li>{{quotation.client}} </li>
     <li>{{quotation.common_direction}} </li>
