--- a/project/crm_app/templates/crm_app/update_quotation.html
+++ b/project/crm_app/templates/crm_app/update_quotation.html
@@ -13,10 +13,202 @@
 
  <form action="" method="post">
 {% csrf_token %}
- {{form.as_p}}
+  <div class="form-error">{{ form.non_field_errors }}</div>
+
+   <p><label for="{{ form.descripsion.id_for_label }}">{{ form.descripsion.label }}:</label>{{ form.descripsion }}</p>
+    <div class="form-error">{{ form.descripsion.errors }}</div>
+
+  <p><label for="{{ form.client.id_for_label }}">{{ form.client.label }}:</label>{{ form.client }}</p>
+    <div class="form-error">{{ form.client.errors }}</div>
+
+  <p><label for="{{ form.loading_country.id_for_label }}">{{ form.loading_country.label }}:</label>{{ form.loading_country }}
+    <label for="{{ form.unloading_country.id_for_label }}">{{ form.unloading_country.label }}:</label>{{ form.unloading_country }}</p>
+
+    <div class="form-error">{{ form.loading_country.errors }}</div>
+    <div class="form-error">{{ form.unloading_country.errors }}</div>
+
+    <p><label for="{{ form.common_transport.id_for_label }}">{{ form.common_transport.label }}:</label>{{ form.common_transport }}</p>
+    <div class="form-error">{{ form.common_transport.errors }}</div>
 
 
-<button type="submit">Сохранить изменения</button>
+<h4>Ставка 1:</h4>
+  <p><label for="{{ form.stavka1.id_for_label }}">{{ form.stavka1.label }}:</label>{{ form.stavka1 }}</p>
+    <div class="form-error">{{ form.stavka1.errors }}</div>
+    <p><label for="{{ form.price1.id_for_label }}">{{ form.price1.label }}:</label>{{ form.price1 }}
+        <label for="{{ form.currency1.id_for_label }}">{{ form.currency1.label }}:</label>{{ form.currency1 }}</p>
+    <div class="form-error">{{ form.price1.errors }}{{ form.currency1.errors }}</div>
+  <p><label for="{{ form.comment_field1.id_for_label }}">{{ form.comment_field1.label }}:</label>{{ form.comment_field1 }}</p>
+    <div class="form-error">{{ form.comment_field1.errors }}</div>
+
+    <!-- ставки: 2, 3, 4 -->
+    <ul class="tree">
+      <li><details><summary> Добавить вторую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka2.id_for_label }}">{{ form.stavka2.label }}:</label>{{ form.stavka2 }}</summary>
+            <div class="form-error">{{ form.stavka2.errors }}</div>
+        </li>
+            <li>
+            <summary><label for="{{ form.price2.id_for_label }}">{{ form.price2.label }}:</label>{{ form.price2 }}<label for="{{ form.currency2.id_for_label }}">{{ form.currency2.label }}:</label>{{ form.currency2 }}</summary>
+            <div class="form-error">{{ form.price2.errors }}{{ form.currency2.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field2.id_for_label }}">{{ form.comment_field2.label }}:</label>{{ form.comment_field2 }}</summary>
+            <div class="form-error">{{ form.comment_field2.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+   <ul class="tree">
+      <li><details><summary> Добавить третью ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka3.id_for_label }}">{{ form.stavka3.label }}:</label>{{ form.stavka3 }}</summary>
+            <div class="form-error">{{ form.stavka3.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price3.id_for_label }}">{{ form.price3.label }}:</label>{{ form.price3 }}<label for="{{ form.currency3.id_for_label }}">{{ form.currency3.label }}:</label>{{ form.currency3 }}</summary>
+            <div class="form-error">{{ form.price3.errors }}{{ form.currency3.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field3.id_for_label }}">{{ form.comment_field3.label }}:</label>{{ form.comment_field3 }}</summary>
+            <div class="form-error">{{ form.comment_field3.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary> Добавить четвертоую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka4.id_for_label }}">{{ form.stavka4.label }}:</label>{{ form.stavka4 }}</summary>
+            <div class="form-error">{{ form.stavka4.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price4.id_for_label }}">{{ form.price4.label }}:</label>{{ form.price4 }}<label for="{{ form.currency4.id_for_label }}">{{ form.currency4.label }}:</label>{{ form.currency4 }}</summary>
+            <div class="form-error">{{ form.price4.errors }}{{ form.currency4.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field4.id_for_label }}">{{ form.comment_field4.label }}:</label>{{ form.comment_field4 }}</summary>
+            <div class="form-error">{{ form.comment_field4.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+
+
+    <ul class="tree">
+      <li><details><summary> Добавить пятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka5.id_for_label }}">{{ form.stavka5.label }}:</label>{{ form.stavka5 }}</summary>
+            <div class="form-error">{{ form.stavka5.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price5.id_for_label }}">{{ form.price5.label }}:</label>{{ form.price5 }}<label for="{{ form.currency5.id_for_label }}">{{ form.currency5.label }}:</label>{{ form.currency5 }}</summary>
+            <div class="form-error">{{ form.price5.errors }}{{ form.currency5.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field5.id_for_label }}">{{ form.comment_field5.label }}:</label>{{ form.comment_field5 }}</summary>
+            <div class="form-error">{{ form.comment_field5.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+
+  <ul class="tree">
+      <li><details><summary>  Добавить шестую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka6.id_for_label }}">{{ form.stavka6.label }}:</label>{{ form.stavka6 }}</summary>
+            <div class="form-error">{{ form.stavka6.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price6.id_for_label }}">{{ form.price6.label }}:</label>{{ form.price6 }}<label for="{{ form.currency6.id_for_label }}">{{ form.currency6.label }}:</label>{{ form.currency6 }}</summary>
+            <div class="form-error">{{ form.price6.errors }}{{ form.currency6.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field6.id_for_label }}">{{ form.comment_field6.label }}:</label>{{ form.comment_field6 }}</summary>
+            <div class="form-error">{{ form.comment_field6.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить седьмую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka7.id_for_label }}">{{ form.stavka7.label }}:</label>{{ form.stavka7 }}</summary>
+            <div class="form-error">{{ form.stavka7.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price7.id_for_label }}">{{ form.price7.label }}:</label>{{ form.price7 }}<label for="{{ form.currency7.id_for_label }}">{{ form.currency7.label }}:</label>{{ form.currency7 }}</summary>
+            <div class="form-error">{{ form.price7.errors }}{{ form.currency7.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field7.id_for_label }}">{{ form.comment_field7.label }}:</label>{{ form.comment_field7 }}</summary>
+            <div class="form-error">{{ form.comment_field7.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить восьмую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka8.id_for_label }}">{{ form.stavka8.label }}:</label>{{ form.stavka8 }}</summary>
+            <div class="form-error">{{ form.stavka8.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price8.id_for_label }}">{{ form.price8.label }}:</label>{{ form.price8 }}<label for="{{ form.currency8.id_for_label }}">{{ form.currency8.label }}:</label>{{ form.currency8 }}</summary>
+            <div class="form-error">{{ form.price8.errors }}{{ form.currency8.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field8.id_for_label }}">{{ form.comment_field8.label }}:</label>{{ form.comment_field8 }}</summary>
+            <div class="form-error">{{ form.comment_field8.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить девятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka9.id_for_label }}">{{ form.stavka9.label }}:</label>{{ form.stavka9 }}</summary>
+            <div class="form-error">{{ form.stavka9.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price9.id_for_label }}">{{ form.price9.label }}:</label>{{ form.price9 }}<label for="{{ form.currency9.id_for_label }}">{{ form.currency9.label }}:</label>{{ form.currency9 }}</summary>
+            <div class="form-error">{{ form.price9.errors }}{{ form.currency9.errors }}</div>
+        </li>
+
+      <li>
+            <summary><label for="{{ form.comment_field9.id_for_label }}">{{ form.comment_field9.label }}:</label>{{ form.comment_field9 }}</summary>
+            <div class="form-error">{{ form.comment_field9.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+
+    <ul class="tree">
+      <li><details><summary>  Добавить десятую ставку: </summary>
+        <ul>
+          <li>
+            <summary><label for="{{ form.stavka10.id_for_label }}">{{ form.stavka10.label }}:</label>{{ form.stavka10 }}</summary>
+            <div class="form-error">{{ form.stavka4.errors }}</div>
+        </li>
+             <li>
+            <summary><label for="{{ form.price10.id_for_label }}">{{ form.price10.label }}:</label>{{ form.price10 }}<label for="{{ form.currency10.id_for_label }}">{{ form.currency10.label }}:</label>{{ form.currency10 }}</summary>
+            <div class="form-error">{{ form10.errors }}{{ form.currency10.errors }}</div>
+        </li>
+      <li>
+            <summary><label for="{{ form.comment_field10.id_for_label }}">{{ form.comment_field10.label }}:</label>{{ form.comment_field10 }}</summary>
+            <div class="form-error">{{ form.comment_field10.errors }}</div>
+      </li></ul>
+      </details></li></ul>
+    <!-- ставки 2, 3, 4 - конец -->
+
+  <p><label for="{{ form.status.id_for_label }}">{{ form.status.label }}:</label>{{ form.status }}</p>
+    <div class="form-error">{{ form.status.errors }}</div>
+
+  <p><label for="{{ form.result.id_for_label }}">{{ form.result.label }}:</label>{{ form.result }}</p>
+    <div class="form-error">{{ form.result.errors }}</div>
+
+
+
+
+    <button>Добавить</button>
 
 
 {%endblock content%}
