--- a/project/crm_app/templates/crm_app/add_sdelka.html
+++ b/project/crm_app/templates/crm_app/add_sdelka.html
@@ -7,7 +7,7 @@
 </ul>
 </div>
 
-<form action="{% url 'add_sdelka' %}" method="post">
+<form action="{% url 'add_sdelka' %}" method="post" enctype="multipart/form-data">
 {% csrf_token %}
 {{form.as_p}}
 
