--- a/project/crm_app/templates/crm_app/add_quotation.html
+++ b/project/crm_app/templates/crm_app/add_quotation.html
@@ -28,11 +28,11 @@
 
 
 <h4>Ставка 1:</h4>
-  <p><label for="{{ form.stavka1.id_for_label }}">{{ form.stavka1.label }}:</label>{{ form.stavka1 }}</p>
-    <div class="form-error">{{ form.stavka1.errors }}</div>
-    <p><label for="{{ form.price1.id_for_label }}">{{ form.price1.label }}:</label>{{ form.price1 }}
+  <p><label for="{{ form.supplyer_1.id_for_label }}">{{ form.supplyer_1.label }}:</label>{{ form.supplyer_1 }}</p>
+    <div class="form-error">{{ form.supplyer_1.errors }}</div>
+    <p><label for="{{ form.sup_price_1.id_for_label }}">{{ form.sup_price_1.label }}:</label>{{ form.sup_price_1 }}
         <label for="{{ form.currency1.id_for_label }}">{{ form.currency1.label }}:</label>{{ form.currency1 }}</p>
-    <div class="form-error">{{ form.price1.errors }}{{ form.currency1.errors }}</div>
+    <div class="form-error">{{ form.sup_price_1.errors }}{{ form.currency1.errors }}</div>
   <p><label for="{{ form.comment_field1.id_for_label }}">{{ form.comment_field1.label }}:</label>{{ form.comment_field1 }}</p>
     <div class="form-error">{{ form.comment_field1.errors }}</div>
 
@@ -41,12 +41,12 @@
       <li><details><summary> Добавить вторую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka2.id_for_label }}">{{ form.stavka2.label }}:</label>{{ form.stavka2 }}</summary>
-            <div class="form-error">{{ form.stavka2.errors }}</div>
+            <summary><label for="{{ form.supplyer_2.id_for_label }}">{{ form.supplyer_2.label }}:</label>{{ form.supplyer_2 }}</summary>
+            <div class="form-error">{{ form.supplyer_2.errors }}</div>
         </li>
             <li>
-            <summary><label for="{{ form.price2.id_for_label }}">{{ form.price2.label }}:</label>{{ form.price2 }}<label for="{{ form.currency2.id_for_label }}">{{ form.currency2.label }}:</label>{{ form.currency2 }}</summary>
-            <div class="form-error">{{ form.price2.errors }}{{ form.currency2.errors }}</div>
+            <summary><label for="{{ form.sup_price_2.id_for_label }}">{{ form.sup_price_2.label }}:</label>{{ form.sup_price_2 }}<label for="{{ form.currency2.id_for_label }}">{{ form.currency2.label }}:</label>{{ form.currency2 }}</summary>
+            <div class="form-error">{{ form.sup_price_2.errors }}{{ form.currency2.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field2.id_for_label }}">{{ form.comment_field2.label }}:</label>{{ form.comment_field2 }}</summary>
@@ -58,12 +58,12 @@
       <li><details><summary> Добавить третью ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka3.id_for_label }}">{{ form.stavka3.label }}:</label>{{ form.stavka3 }}</summary>
-            <div class="form-error">{{ form.stavka3.errors }}</div>
+            <summary><label for="{{ form.supplyer_3.id_for_label }}">{{ form.supplyer_3.label }}:</label>{{ form.supplyer_3 }}</summary>
+            <div class="form-error">{{ form.supplyer_3.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price3.id_for_label }}">{{ form.price3.label }}:</label>{{ form.price3 }}<label for="{{ form.currency3.id_for_label }}">{{ form.currency3.label }}:</label>{{ form.currency3 }}</summary>
-            <div class="form-error">{{ form.price3.errors }}{{ form.currency3.errors }}</div>
+            <summary><label for="{{ form.sup_price_3.id_for_label }}">{{ form.sup_price_3.label }}:</label>{{ form.sup_price_3 }}<label for="{{ form.currency3.id_for_label }}">{{ form.currency3.label }}:</label>{{ form.currency3 }}</summary>
+            <div class="form-error">{{ form.sup_price_3.errors }}{{ form.currency3.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field3.id_for_label }}">{{ form.comment_field3.label }}:</label>{{ form.comment_field3 }}</summary>
@@ -75,12 +75,12 @@
       <li><details><summary> Добавить четвертоую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka4.id_for_label }}">{{ form.stavka4.label }}:</label>{{ form.stavka4 }}</summary>
-            <div class="form-error">{{ form.stavka4.errors }}</div>
+            <summary><label for="{{ form.supplyer_4.id_for_label }}">{{ form.supplyer_4.label }}:</label>{{ form.supplyer_4 }}</summary>
+            <div class="form-error">{{ form.supplyer_4.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price4.id_for_label }}">{{ form.price4.label }}:</label>{{ form.price4 }}<label for="{{ form.currency4.id_for_label }}">{{ form.currency4.label }}:</label>{{ form.currency4 }}</summary>
-            <div class="form-error">{{ form.price4.errors }}{{ form.currency4.errors }}</div>
+            <summary><label for="{{ form.sup_price_4.id_for_label }}">{{ form.sup_price_4.label }}:</label>{{ form.sup_price_4 }}<label for="{{ form.currency4.id_for_label }}">{{ form.currency4.label }}:</label>{{ form.currency4 }}</summary>
+            <div class="form-error">{{ form.sup_price_4.errors }}{{ form.currency4.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field4.id_for_label }}">{{ form.comment_field4.label }}:</label>{{ form.comment_field4 }}</summary>
@@ -94,12 +94,12 @@
       <li><details><summary> Добавить пятую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka5.id_for_label }}">{{ form.stavka5.label }}:</label>{{ form.stavka5 }}</summary>
-            <div class="form-error">{{ form.stavka5.errors }}</div>
+            <summary><label for="{{ form.supplyer_5.id_for_label }}">{{ form.supplyer_5.label }}:</label>{{ form.supplyer_5 }}</summary>
+            <div class="form-error">{{ form.supplyer_5.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price5.id_for_label }}">{{ form.price5.label }}:</label>{{ form.price5 }}<label for="{{ form.currency5.id_for_label }}">{{ form.currency5.label }}:</label>{{ form.currency5 }}</summary>
-            <div class="form-error">{{ form.price5.errors }}{{ form.currency5.errors }}</div>
+            <summary><label for="{{ form.sup_price_5.id_for_label }}">{{ form.sup_price_5.label }}:</label>{{ form.sup_price_5 }}<label for="{{ form.currency5.id_for_label }}">{{ form.currency5.label }}:</label>{{ form.currency5 }}</summary>
+            <div class="form-error">{{ form.sup_price_5.errors }}{{ form.currency5.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field5.id_for_label }}">{{ form.comment_field5.label }}:</label>{{ form.comment_field5 }}</summary>
@@ -112,12 +112,12 @@
       <li><details><summary>  Добавить шестую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka6.id_for_label }}">{{ form.stavka6.label }}:</label>{{ form.stavka6 }}</summary>
-            <div class="form-error">{{ form.stavka6.errors }}</div>
+            <summary><label for="{{ form.supplyer_6.id_for_label }}">{{ form.supplyer_6.label }}:</label>{{ form.supplyer_6 }}</summary>
+            <div class="form-error">{{ form.supplyer_6.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price6.id_for_label }}">{{ form.price6.label }}:</label>{{ form.price6 }}<label for="{{ form.currency6.id_for_label }}">{{ form.currency6.label }}:</label>{{ form.currency6 }}</summary>
-            <div class="form-error">{{ form.price6.errors }}{{ form.currency6.errors }}</div>
+            <summary><label for="{{ form.sup_price_6.id_for_label }}">{{ form.sup_price_6.label }}:</label>{{ form.sup_price_6 }}<label for="{{ form.currency6.id_for_label }}">{{ form.currency6.label }}:</label>{{ form.currency6 }}</summary>
+            <div class="form-error">{{ form.sup_price_6.errors }}{{ form.currency6.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field6.id_for_label }}">{{ form.comment_field6.label }}:</label>{{ form.comment_field6 }}</summary>
@@ -129,12 +129,12 @@
       <li><details><summary>  Добавить седьмую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka7.id_for_label }}">{{ form.stavka7.label }}:</label>{{ form.stavka7 }}</summary>
-            <div class="form-error">{{ form.stavka7.errors }}</div>
+            <summary><label for="{{ form.supplyer_7.id_for_label }}">{{ form.supplyer_7.label }}:</label>{{ form.supplyer_7 }}</summary>
+            <div class="form-error">{{ form.supplyer_7.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price7.id_for_label }}">{{ form.price7.label }}:</label>{{ form.price7 }}<label for="{{ form.currency7.id_for_label }}">{{ form.currency7.label }}:</label>{{ form.currency7 }}</summary>
-            <div class="form-error">{{ form.price7.errors }}{{ form.currency7.errors }}</div>
+            <summary><label for="{{ form.sup_price_7.id_for_label }}">{{ form.sup_price_7.label }}:</label>{{ form.sup_price_7 }}<label for="{{ form.currency7.id_for_label }}">{{ form.currency7.label }}:</label>{{ form.currency7 }}</summary>
+            <div class="form-error">{{ form.sup_price_7.errors }}{{ form.currency7.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field7.id_for_label }}">{{ form.comment_field7.label }}:</label>{{ form.comment_field7 }}</summary>
@@ -146,12 +146,12 @@
       <li><details><summary>  Добавить восьмую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka8.id_for_label }}">{{ form.stavka8.label }}:</label>{{ form.stavka8 }}</summary>
-            <div class="form-error">{{ form.stavka8.errors }}</div>
+            <summary><label for="{{ form.supplyer_8.id_for_label }}">{{ form.supplyer_8.label }}:</label>{{ form.supplyer_8 }}</summary>
+            <div class="form-error">{{ form.supplyer_8.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price8.id_for_label }}">{{ form.price8.label }}:</label>{{ form.price8 }}<label for="{{ form.currency8.id_for_label }}">{{ form.currency8.label }}:</label>{{ form.currency8 }}</summary>
-            <div class="form-error">{{ form.price8.errors }}{{ form.currency8.errors }}</div>
+            <summary><label for="{{ form.sup_price_8.id_for_label }}">{{ form.sup_price_8.label }}:</label>{{ form.sup_price_8 }}<label for="{{ form.currency8.id_for_label }}">{{ form.currency8.label }}:</label>{{ form.currency8 }}</summary>
+            <div class="form-error">{{ form.sup_price_8.errors }}{{ form.currency8.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field8.id_for_label }}">{{ form.comment_field8.label }}:</label>{{ form.comment_field8 }}</summary>
@@ -163,12 +163,12 @@
       <li><details><summary>  Добавить девятую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka9.id_for_label }}">{{ form.stavka9.label }}:</label>{{ form.stavka9 }}</summary>
-            <div class="form-error">{{ form.stavka9.errors }}</div>
+            <summary><label for="{{ form.supplyer_9.id_for_label }}">{{ form.supplyer_9.label }}:</label>{{ form.supplyer_9 }}</summary>
+            <div class="form-error">{{ form.supplyer_9.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price9.id_for_label }}">{{ form.price9.label }}:</label>{{ form.price9 }}<label for="{{ form.currency9.id_for_label }}">{{ form.currency9.label }}:</label>{{ form.currency9 }}</summary>
-            <div class="form-error">{{ form.price9.errors }}{{ form.currency9.errors }}</div>
+            <summary><label for="{{ form.sup_price_9.id_for_label }}">{{ form.sup_price_9.label }}:</label>{{ form.sup_price_9 }}<label for="{{ form.currency9.id_for_label }}">{{ form.currency9.label }}:</label>{{ form.currency9 }}</summary>
+            <div class="form-error">{{ form.sup_price_9.errors }}{{ form.currency9.errors }}</div>
         </li>
 
       <li>
@@ -181,12 +181,13 @@
       <li><details><summary>  Добавить десятую ставку: </summary>
         <ul>
           <li>
-            <summary><label for="{{ form.stavka10.id_for_label }}">{{ form.stavka10.label }}:</label>{{ form.stavka10 }}</summary>
-            <div class="form-error">{{ form.stavka4.errors }}</div>
+            <summary><label for="{{ form.supplyer_10.id_for_label }}">{{ form.supplyer_10.label }}:</label>{{ form.supplyer_10 }}</summary>
+            <div class="form-error">{{ form.supplyer_10.errors }}</div>
         </li>
              <li>
-            <summary><label for="{{ form.price10.id_for_label }}">{{ form.price10.label }}:</label>{{ form.price10 }}<label for="{{ form.currency10.id_for_label }}">{{ form.currency10.label }}:</label>{{ form.currency10 }}</summary>
-            <div class="form-error">{{ form10.errors }}{{ form.currency10.errors }}</div>
+            <summary><label for="{{ form.sup_price_10.id_for_label }}">{{ form.sup_price_10.label }}:</label>{{ form.sup_price_10 }}
+                <label for="{{ form.currency10.id_for_label }}">{{ form.currency10.label }}:</label>{{ form.currency10 }}</summary>
+            <div class="form-error">{{ form.sup_price_10.errors }}{{ form.currency10.errors }}</div>
         </li>
       <li>
             <summary><label for="{{ form.comment_field10.id_for_label }}">{{ form.comment_field10.label }}:</label>{{ form.comment_field10 }}</summary>
