--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -17,45 +17,46 @@
     <li>Описание потребности: {{quotation.descripsion}}</li>
     <li>Транспорт: {{quotation.transport}}</li>
     <li>{{quotation.client}} </li>
-    <li>{{quotation.common_direction}} </li>
-    <li>ставка  -{{quotation.stavka1}} </li>
-     <li>цена:  -{{quotation.price1}} {{quotation.currency1}}  </li>
+    <li>Место загрузки груза: {{quotation.loading_country}} </li>
+    <li>Место выгрузки груза: {{quotation.unloading_country}} </li>
+    <li>Ставка Перевозчика  -{{quotation.supplyer_1}} </li>
+     <li>цена:  -{{quotation.sup_price_1}} {{quotation.currency1}}  </li>
     <li>коммент  -{{quotation.comment_field1}} </li>
 
-    <li>ставка 2 - {{quotation.stavka2}}
-     <li>цена:  -{{quotation.price2}} {{quotation.currency2}}  </li>
+    <li>Ставка Перевозчика 2 - {{quotation.supplyer_2}}
+     <li>цена:  -{{quotation.sup_price_2}} {{quotation.currency2}}  </li>
     <li>коммент 2 - {{quotation.comment_field2}} </li>
 
-    <li>ставка 3 - {{quotation.stavka3}} </li>
-     <li>цена:  -{{quotation.price3}} {{quotation.currency3}}  </li>
+    <li>Ставка Перевозчика 3 - {{quotation.supplyer_3}} </li>
+     <li>цена:  -{{quotation.sup_price_3}} {{quotation.currency3}}  </li>
     <li>коммент 3 -{{quotation.comment_field3}} </li>
 
-    <li>ставка 4 -{{quotation.stavka4}} </li>
-     <li>цена:  -{{quotation.price4}} {{quotation.currency4}}  </li>
+    <li>Ставка Перевозчика 4 -{{quotation.supplyer_4}} </li>
+     <li>цена:  -{{quotation.sup_price_4}} {{quotation.currency4}}  </li>
     <li>коммент 4 -{{quotation.comment_field4}} </li>
 
-     <li>ставка 5  -{{quotation.stavka5}} </li>
-     <li>цена:  - {{quotation.price5}} {{quotation.currency5}}  </li>
+     <li>Ставка Перевозчика 5  -{{quotation.supplyer_5}} </li>
+     <li>цена:  - {{quotation.sup_price_5}} {{quotation.currency5}}  </li>
     <li>коммент 5 -{{quotation.comment_field5}} </li>
 
-    <li>ставка 6 - {{quotation.stavka6}} </li>
-     <li>цена:  - {{quotation.price6}} {{quotation.currency6}}  </li>
+    <li>Ставка Перевозчика 6 - {{quotation.supplyer_6}} </li>
+     <li>цена:  - {{quotation.sup_price_6}} {{quotation.currency6}}  </li>
     <li>коммент 6 - {{quotation.comment_field6}} </li>
 
-    <li>ставка 7 - {{quotation.stavka7}} </li>
-     <li>цена:  - {{quotation.price7}} {{quotation.currency7}}  </li>
+    <li>Ставка Перевозчика 7 - {{quotation.supplyer_7}} </li>
+     <li>цена:  - {{quotation.sup_price_7}} {{quotation.currency7}}  </li>
     <li>коммент 7 -{{quotation.comment_field7}} </li>
 
-    <li>ставка 8 -{{quotation.stavka8}} </li>
-     <li>цена:  - {{quotation.price8}} {{quotation.currency8}}  </li>
+    <li>Ставка Перевозчика 8 -{{quotation.supplyer_8}} </li>
+     <li>цена:  - {{quotation.sup_price_8}} {{quotation.currency8}}  </li>
     <li>коммент 8 - {{quotation.comment_field8}} </li>
 
-    <li>ставка 9 - {{quotation.stavka9}} </li>
-     <li>цена:  - {{quotation.price9}} {{quotation.currency9}}  </li>
+    <li>Ставка Перевозчика 9 - {{quotation.supplyer_9}} </li>
+     <li>цена:  - {{quotation.sup_price_9}} {{quotation.currency9}}  </li>
     <li>коммент 9 - {{quotation.comment_field9}} </li>
 
-    <li>ставка 10 -{{quotation.stavka10}} </li>
-     <li>цена:  - {{quotation.price10}} {{quotation.currency10}}  </li>
+    <li>Ставка Перевозчика 10 -{{quotation.supplyer_10}} </li>
+     <li>цена:  - {{quotation.sup_price_10}} {{quotation.currency10}}  </li>
     <li>коммент 10 - {{quotation.comment_field10}} </li>
 
     <li>{{quotation.status}} </li>
