delete quotation made successfully

--- a/project/crm_app/static/crm_app/css/styles.css
+++ b/project/crm_app/static/crm_app/css/styles.css
@@ -83,6 +83,14 @@ p#hh {
 }
 
 
+.success{
+    color: green;
+    width: 360px;
+    height: 36px;
+    font-size: 25px;
+    text-align: center;
+    border: 2px dashed green;
+}
 
 
 
