--- a/project/crm_app/templates/crm_app/add_othercompany.html
+++ b/project/crm_app/templates/crm_app/add_othercompany.html
@@ -7,7 +7,7 @@
 </ul>
 </div>
 
-<form action="{% url 'add_client' %}" method="post">
+<form action="{% url 'add_othercompany' %}" method="post">
     {% csrf_token %}
      <div class="form-error">{{ form.non_field_errors }}</div>
 
