--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -14,7 +14,8 @@
 
 
     <h3>от {{quotation.time_create}}</h3>
-    <li>Описание потребности: {{quotation.descripsion}}</li>
+    <li>_____________{{quotation.id}}_____________</li>
+    <li>Описание потребности: {{quotation.description}}</li>
     <li>Транспорт: {{quotation.transport}}</li>
     <li>{{quotation.client}} </li>
     <li>Место загрузки груза: {{quotation.loading_country}} </li>
