--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -62,7 +62,10 @@
     <br>
 
 <td ><a href="#">Редактировать</a></td>
-    <td align = 'right'><a href="#">Удалить</a></td>
+    <td align = 'right'><a href="{% url 'delete_sdelka' sdelka.id %}">Удалить</a></td>
+
+
+
 
 </ul>
 </div>
