--- a/project/crm_app/templates/crm_app/other_companies.html
+++ b/project/crm_app/templates/crm_app/other_companies.html
@@ -18,6 +18,11 @@
 </div>
 
 <div class="centercontent"><ul>
+     <button class="addbutton"><a href="{% url 'add_othercompany' %}">Добавить Организацию</a></button>
+     {% for msg in messages %}
+    <div class="success">{{msg}}</div>
+    {% endfor %}
+
     {% for c in other_companies %}
         <h3>{{c.company_name}}</h3>
     <li>{{c.descripsion}}</li>
