successfully quotation to sdelka

--- a/project/crm_app/templates/crm_app/client.html
+++ b/project/crm_app/templates/crm_app/client.html
@@ -22,7 +22,8 @@
     <li><a href="#">sdelki v kotoryh uchavstvuet - количество</a></li>
     <li><a href="#">документы </a></li>
 
-<p ><a href="#">Редактировать</a></p><p ><a href="#">Удалить</a></p>
+<p ><a href="#">Редактировать</a></p>
+     <td align = 'right'><a href="{% url 'delete_client' client.id %}">Удалить</a></td>
 
 </ul>
 </div>
