--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -67,7 +67,7 @@
 
     <br>
 
-<td ><a href="{% url 'update_quotation' quotation.id %}">Редактировать</a></td>
+<td ><a href="{% url 'update_quotation' quotation.id %}">Редактировать</a>
     <td align = 'right'><a href="{% url 'delete_quotation' quotation.id %}">Удалить</a></td>
 
 </ul>
