--- a/project/crm_app/templates/crm_app/quotations.html
+++ b/project/crm_app/templates/crm_app/quotations.html
@@ -21,11 +21,13 @@
     {% for c in quotations %}
         <h3>{{c.client}}</h3>
     <li>котировка создана: {{c.time_create}}</li>
+    <li>{{c.description}}</li>
     <li>{{c.status}}</li>
     <li>место загрузки:  {{c.loading_country}}  ||  место выгрузки: {{c.unloading_country}}</li>
     <li>транспорт: {{c.common_transport}} </li>
     <li>{{c.result}} </li>
    
+<a href="{% url 'quot_sdelka' c.id %}">создать сделку</a>
 
 <p ><a href="{{ c.get_absolute_url }}">Посмотреть подробней</a></p>
     {% endfor %}<hr>
