--- a/project/crm_app/templates/crm_app/sdelka.html
+++ b/project/crm_app/templates/crm_app/sdelka.html
@@ -61,7 +61,8 @@
 
     <br>
 
-<td ><a href="#">Редактировать</a></td>
+<td>
+    <a href="{% url 'update_sdelka' sdelka.id %}">Редактировать</a>
     <td align = 'right'><a href="{% url 'delete_sdelka' sdelka.id %}">Удалить</a></td>
 
 
