--- a/project/crm_app/templates/crm_app/other_company.html
+++ b/project/crm_app/templates/crm_app/other_company.html
@@ -23,7 +23,7 @@
 
     <li><a href="#">документы </a></li>
 
-<p ><a href="#">Редактировать</a></p>
+<p ><a href="{% url 'update_other_company' other_company.id %}">Редактировать</a></p>
    <td align = 'right'><a href="{% url 'delete_other_company' other_company.id %}">Удалить</a></td>
 
 </ul>
