--- a/project/crm_app/templates/crm_app/quotation.html
+++ b/project/crm_app/templates/crm_app/quotation.html
@@ -61,7 +61,7 @@
     <li>коммент 10 - {{quotation.comment_field10}} </li>
 
     <li>{{quotation.status}} </li>
-    <li>{{quotation.result}} </li>
+    <li value=""> {{quotation.result}}</li>
 
     <li>{{quotation.common_transport}} </li>
 
