Agusha works good

--- a/project/crm_app/templates/crm_app/sdelki.html
+++ b/project/crm_app/templates/crm_app/sdelki.html
@@ -19,6 +19,7 @@
 
 {% for c in sdelki %}
         <h3>{{c.client}}</h3>
+    <li>Сделка создана: {{c.time_create}}</li>
     <li>{{c.description}}</li>
 
 
