--- a/project/crm_app/templates/crm_app/quot_sdelka.html
+++ b/project/crm_app/templates/crm_app/quot_sdelka.html
@@ -11,7 +11,7 @@
 
 <div class="centercontent"><ul>
 
-<form action="" method="post" enctype="multipart/form-data">
+<form action="{% url 'add_sdelka' %}" method="post" enctype="multipart/form-data">
 {% csrf_token %}
 {{form.as_p}}
 
